# stripSystem

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  HANDOFF.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
apps/worker-python/: pyproject.toml
apps/worker-python/src/worker_python/: __init__.py  batch.py  cli.py  time_utils.py
apps/worker-python/src/worker_python/imports/: __init__.py  registry.py
apps/worker-python/src/worker_python/labels/: __init__.py  pdf_label_generator.py  qr_payload.py
apps/worker-python/src/worker_python/pallets/: __init__.py  calculator.py  rules.py
apps/worker-python/src/worker_python/parser/: __init__.py  bestar_receiving.py  detector.py  (+2 more)
apps/worker-python/tests/fixtures/: generate_report_visual_workbooks.py
apps/worker-python/tests/integration/: test_batch_cli.py  test_parser_profile_cli_contract.py  test_parser_profile_real_fixtures.py  test_phase0_e2e.py  test_unload_wage_p0_cli.py  test_unloading_summary_cli.py  test_wage_api_cli.py  test_wage_p0_cli.py
apps/worker-python/tests/unit/: test_bestar_receiving_parser.py  test_excel_report_writer.py  test_fixtures.py  test_import_registry.py  test_pallet_calculator.py  test_parser_detector.py  test_parser_profile_engine.py  test_parser_profile_fingerprint.py  test_pdf_label_generator.py  test_qr_payload.py  test_smoke.py  test_task_report.py  test_time_utils.py  test_unloading_plan_cn_parser.py  test_unloading_summary_excel_writer.py  test_unloading_wage_settlement.py  test_wage_attendance.py  test_wage_generator_formatting.py
(+882 files in other folders)
